--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
   	<spring-version>5.1.8.RELEASE</spring-version>
   	<aspectjweaver-version>1.9.4</aspectjweaver-version>
   	<mybatis-version>3.5.2</mybatis-version>
+  	<pagehelper-version>4.1.6</pagehelper-version>
   	<mybatis.spring-version>2.0.2</mybatis.spring-version>
   	<log4j-version>1.2.17</log4j-version>
   	<mysql-version>5.1.48</mysql-version>
@@ -58,6 +59,12 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
 			<version>${mybatis-version}</version>
+		</dependency>
+		<!-- mybatis分页插件 -->
+		<dependency>
+    		<groupId>com.github.pagehelper</groupId>
+    		<artifactId>pagehelper</artifactId>
+    		<version>${pagehelper-version}</version>
 		</dependency>
 		<!-- mybatis鍜宻pring鏁村悎 -->
 		<dependency>
